--- a/src/App/main.scss
+++ b/src/App/main.scss
@@ -20,7 +20,7 @@ time, mark, audio, video {
 	box-sizing: border-box;
 	text-decoration: none;
 	outline: 0;
-	font-family: 'Courier New', Courier, monospace;
+	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 article, aside, details, figcaption, figure, 
@@ -46,5 +46,3 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-
-
