--- a/src/App/variables.scss
+++ b/src/App/variables.scss
@@ -2,6 +2,7 @@
 $base-color1 : white;
 $base-color2 : black;
 
-$color1 : blue;
-$color2 : orange;
-$color3 : orangered;
+$color1 : #EB910B;
+$color2 : blue;
+$color3 : orange;
+$color4: orangered;
