--- a/src/Responsive/Large Laptop-Large Desktop/Desktop.scss
+++ b/src/Responsive/Large Laptop-Large Desktop/Desktop.scss
@@ -1,3 +1,131 @@
+@import '../../App/main.scss';
+@import '../../App/variables.scss';
+
 @media(max-width: 1440px) {
-    
+    header {
+        .uswapp-header {
+
+            .lang-content {
+                flex-basis: 100px;
+                margin-right: 0;
+
+                .change-lang {
+                    margin-right: 5px;
+
+                    svg {
+                        width: 1.5rem;
+                        height: 25px;
+                    }
+                }
+            }
+
+            .theme-content {
+                margin-bottom: 3px;
+
+                .change-theme {
+                    .theme-label {
+                        width: 55px;
+                        height: 25px;
+                    }
+
+                    .theme-slider:before {
+                        height: 20px;
+                        width: 20px;
+                    }
+
+                    .sun svg {
+                        top: 4px;
+                        left: 32px;
+                        width: 20px;
+                        height: 18px;
+                    }
+
+                    .moon svg {
+                        top: 4px;
+                        left: 3px;
+                        width: 20px;
+                        height: 18px;
+
+                    }
+
+                    .checked-input:checked+.theme-slider:before {
+                        transform: translateX(30px);
+                    }
+                }
+            }
+
+            .user-contents {
+                flex-basis: 400px;
+
+                .notifications {
+
+                    .notifications-icon {
+                        svg {
+                            width: 20px;
+                            height: 20px;
+                        }
+                    }
+
+                    .notifications-text {
+                        font-size: 14px;
+
+                    }
+                }
+
+                .settings {
+
+                    .settings-icon {
+                        svg {
+                            width: 20px;
+                            height: 20px;
+                        }
+                    }
+
+                    .settings-text {
+                        font-size: 14px;
+                    }
+                }
+
+                .user-log {
+
+                    .account {
+
+                        .user-icon {
+                            width: 2rem;
+                            height: 2rem;
+
+                            svg {
+                                width: 1.5rem;
+                                height: 1.5rem;
+                                margin-top: 3px;
+                            }
+                        }
+
+                        .username {
+                            font-size: 14px;
+                        }
+
+                        .user-mail {
+                            font-size: 14px;
+                        }
+                    }
+                }
+
+                .log-out {
+
+                    .logout-icon {
+
+                        svg {
+                            width: 20px;
+                            height: 20px;
+                        }
+                    }
+
+                    .logout {
+                        font-size: 14px;
+                    }
+                }
+            }
+        }
+    }
 }
