--- a/src/Responsive/Tablet-Large Tablet/Tablet.scss
+++ b/src/Responsive/Tablet-Large Tablet/Tablet.scss
@@ -1,3 +1,179 @@
-@media (max-width: 992px){
-    
+@import '../../App/main.scss';
+@import '../../App/variables.scss';
+
+@media (max-width: 992px) {
+
+    header {
+
+        .uswapp-header {
+            padding: 5px;
+
+            .uswapp-logo {
+
+                img {
+                    width: 75px;
+                    height: 75px;
+                }
+            }
+
+            .searchbox {
+
+                input {
+                    height: 30px;
+                    font-size: 13px;
+                    padding-left: 2rem;
+                }
+
+                span {
+                    svg {
+                        width: 18px;
+                        height: 18px;
+                        margin-top: 6px;
+                    }
+                }
+            }
+
+            .lang-content {
+
+                .change-lang {
+                    margin-right: 5px;
+
+                    svg {
+                        width: 20px;
+                        height: 23px;
+                    }
+                }
+
+                .viewed-flag {
+                    width: 28px;
+                    height: 28px;
+                }
+
+                div {
+
+                    span {
+                        .selected-flag {
+                            width: 28px;
+                            height: 28px;
+                        }
+
+                        .unselected-flag {
+                            width: 28px;
+                            height: 28px;
+                        }
+                    }
+                }
+            }
+
+            .theme-content {
+                margin-bottom: 7px;
+
+                .change-theme {
+                    .theme-label {
+                        width: 50px;
+                        height: 23px;
+                    }
+
+                    .theme-slider:before {
+                        height: 18px;
+                        width: 18px;
+                    }
+
+                    .sun svg {
+                        left: 29px;
+                        width: 18px;
+                        height: 16px;
+                    }
+
+                    .moon svg {
+                        width: 18px;
+                        height: 16px;
+
+                    }
+
+                    .checked-input:checked+.theme-slider:before {
+                        transform: translateX(28px);
+                    }
+                }
+            }
+
+            .user-contents {
+                flex-basis: 300px;
+
+                .notifications {
+                    margin-top: 5px;
+
+                    .notifications-icon {
+                        svg {
+                            width: 18px;
+                            height: 18px;
+                        }
+                    }
+
+                    .notifications-text {
+                        font-size: 12px;
+                        margin-top: 5px;
+                    }
+                }
+
+                .settings {
+                    margin-top: 5px;
+
+                    .settings-icon {
+                        svg {
+                            width: 18px;
+                            height: 18px;
+                        }
+                    }
+
+                    .settings-text {
+                        font-size: 12px;
+                        margin-top: 5px;
+                    }
+                }
+
+                .user-log {
+
+                    .account {
+                        margin-top: 3px;
+
+                        .user-icon {
+                            width: 1.5rem;
+                            height: 1.5rem;
+
+                            svg {
+                                width: 1rem;
+                                height: 1rem;
+                            }
+                        }
+
+                        .username {
+                            font-size: 12px;
+                        }
+
+                        .user-mail {
+                            font-size: 12px;
+                        }
+                    }
+                }
+
+                .log-out {
+
+                    .logout-icon {
+                        margin-top: 5px;
+
+                        svg {
+                            width: 18px;
+                            height: 18px;
+                        }
+                    }
+
+                    .logout {
+                        font-size: 12px;
+                        margin-top: 5px;
+                    }
+                }
+            }
+        }
+    }
 }
