--- a/src/Responsive/Large Mobile-Tablet/LMobile.scss
+++ b/src/Responsive/Large Mobile-Tablet/LMobile.scss
@@ -6,7 +6,15 @@
     header {
         .uswapp-header {
             padding: 10px;
-            
+
+            .uswapp-logo {
+
+                img {
+                    padding-top: 1rem;
+                    padding-right: 1rem;
+                }
+            }
+
             .responsive-menu {
                 width: 85%;
                 height: 100%;
@@ -41,7 +49,7 @@
                         width: 20px;
                         color: #176192;
                         margin-top: 2px;
-                      }
+                    }
                 }
             }
         }
