--- a/src/Responsive/Laptop-Desktop/Laptop.scss
+++ b/src/Responsive/Laptop-Desktop/Laptop.scss
@@ -10,13 +10,34 @@
 
             .lang-content {
                 flex-basis: 75px;
-                
+
                 .change-lang {
 
                     svg {
                         width: 22px;
                         height: 24px;
                     }
+                }
+            }
+        }
+    }
+
+    section {
+
+        .products-content {
+
+            >div {
+
+                >span {
+
+                    svg {
+                        width: 25px;
+                        height: 25px;
+                    }
+                }
+
+                >span+span {
+                    font-size: 1rem;
                 }
             }
         }
