--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -344,7 +344,7 @@ section {
   width: 100%;
   height: max-content;
 
-  .products-content {
+  .product-categories {
     display: flex;
     justify-content: space-around;
     margin-top: 4%;
