update-responsive-changes

--- a/src/Responsive/Large Mobile-Tablet/LMobile.scss
+++ b/src/Responsive/Large Mobile-Tablet/LMobile.scss
@@ -265,7 +265,7 @@
                 position: absolute;
                 background: none;
                 border: none;
-                bottom: 1rem;
+                bottom: 15px;
                 right: 0.5rem;
 
                 svg {
